# church-attendance-system

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.sh  setup_windows.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: gas_config.json  settings.json
data/csv_files/: chien2.csv  nghia2 copy.csv
data/csv_files/2024_25/: au1.csv  au2.csv  au3.csv  chien1.csv  nghia1.csv  nghia3.csv  thieu1.csv  thieu2.csv  thieu3.csv
data/csv_files/2025_26/: a1.csv  a2.csv  a3.csv  boi_duong_bi_tich.csv  c1.csv  c2.csv  du_truong.csv  h1.csv  h2.csv  n1.csv  n2.csv  n3.csv  t1.csv  t2.csv  t3.csv
data/csv_files/2025_26_bo_sung/: a1.csv  a2.csv  a3.csv  bo_sung_dot_3.csv  bo_sung_dot_4.csv  c1.csv  c2.csv  n1.csv  t1.csv  t2.csv
data/id_cards/: .gitkeep
data/qr_codes/: .gitkeep
data/templates/: (C1) Danh sách (2025-2026) - Điểm danh.csv  master_map_example.csv  sheet_example.csv  students_template.csv
docs/: installation.md
output/: .gitkeep
scripts/: create_qrcode.py  create_qrcode_card.py  create_qrcode_card_name.py  create_qrcode_card_name_bo_sung.py  deploy.sh  setup.py
scripts/outdated/: create_qrcode_card_name.py  generate_qr_codes.py  import_qrcode.py  make_card.py  overlay_images.py
src/: __init__.py
src/google_apps_script/: .claspignore  Code.gs  Code.js  Index.html  Scanner.html
src/image_processing/: __init__.py  overlay_images.py
src/qr_generation/: __init__.py  create_qrcode.py  import_qrcode.py
